--- a/automations.yaml
+++ b/automations.yaml
@@ -410,23 +410,6 @@
   - data:
       entity_id: light.growing_light_storage
     service: light.turn_off
-- id: '1574365075718'
-  alias: Tänd i barnrum vid knapptryck
-  description: ''
-  trigger:
-  - event_data:
-      event: 1002
-      id: knapp_barnrum
-    event_type: deconz_event
-    platform: event
-  condition: []
-  action:
-  - alias: ''
-    data:
-      entity_id:
-      - light.cloudlight
-      - light.balloonlight
-    service: light.turn_on
 - id: '1574365327804'
   alias: Släck i barnrum vid knapptryck
   description: ''
@@ -456,3 +439,45 @@
       - group.livingroom_lights
       - group.office_lights
     service: light.turn_off
+- id: '1580248008016'
+  alias: Aktivera Läggdags på vardagar
+  description: ''
+  trigger:
+  - at: '21:45'
+    platform: time
+  condition:
+  - condition: state
+    entity_id: binary_sensor.workday_sensor
+    state: 'on'
+  action:
+  - scene: scene.laggdags
+- id: '1581233409836'
+  alias: Aktivera morgonstund
+  description: ''
+  trigger:
+  - at: 06:30
+    platform: time
+  condition: []
+  action:
+  - entity_id: scene.morgonstund
+    service: scene.turn_on
+- id: '1581239976166'
+  alias: Stäng av Onkyo när lampor släcks efter 22:00
+  description: ''
+  trigger:
+  - entity_id: group.interior_lights
+    from: 'on'
+    platform: state
+    to: 'off'
+  - at: '22:00'
+    platform: time
+  condition:
+  - after: '22:00'
+    before: 06:00
+    condition: time
+  - condition: state
+    entity_id: group.interior_lights
+    state: 'off'
+  action:
+  - entity_id: media_player.onkyo
+    service: media_player.turn_off
