--- a/sensors.yaml
+++ b/sensors.yaml
@@ -1,3 +1,8 @@
+  - platform: systemmonitor
+    resources:
+      - type: disk_use_percent
+        arg: /home
+      - type: memory_free
   - platform: yr
     name: Yr
     forecast: 10
