--- a/sensors.yaml
+++ b/sensors.yaml
@@ -2,7 +2,8 @@
     resources:
       - type: disk_use_percent
         arg: /home
-      - type: memory_free
+      - type: memory_use_percent
+      - type: processor_use
   - platform: yr
     name: Yr
     forecast: 10
