--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,7 +10,12 @@ binary_sensor:
     count: 1
     scan_interval: 10
   - platform: workday
+    name: workday_today
     country: SE
+  - platform: workday
+    name: workday_tomorrow
+    country: SE
+    days_offset: 1
 
 asuswrt:
     host: 192.168.1.1
