--- a/automations.yaml
+++ b/automations.yaml
@@ -1,3 +1,13 @@
+- id: '1'
+  alias: "Byt kanal till SVT1"
+  trigger:
+    - platform: event
+      event_type: ios.action_fired
+      event_data:
+        actionName: 'SVT1'
+  action:
+    service: script.turn_on
+    entity_id: script.watch_svt_1
 - id: '1513546699606'
   alias: Tänd i matsal och hall
   trigger:
@@ -77,18 +87,19 @@
     from: not_home
     platform: state
     to: home
-- action:
-  - data:
-      entity_id: group.hall_lights
-    service: light.toggle
-  alias: Tänd/släck i hallen vid knapptryck
-  condition: []
-  id: '1515869879592'
+- id: '1515869879592'
+  alias: Tänd upp vid knapptryck
   trigger:
   - event_data:
       event: 1002
+      id: knapp_entre
     event_type: deconz_event
     platform: event
+  condition: []
+  action:
+  - entity_id: scene.tand_upp
+    service: scene.turn_on
+  mode: single
 - id: '1517092740693'
   alias: Sätt på Receiver när CCA börjar spela
   trigger:
@@ -198,10 +209,10 @@
     platform: time
   condition:
   - condition: state
-    entity_id: device_tracker.izac_xr
+    entity_id: device_tracker.izac_xr_mobile_app
     state: not_home
   - condition: state
-    entity_id: device_tracker.katrin_zagerholm_iphone
+    entity_id: device_tracker.katrin_zagerholm_iphone_mobile_app
     state: not_home
   action:
   - data:
@@ -214,6 +225,7 @@
       color_temp: 370
       entity_id: light.kattylampan
     service: light.turn_on
+  mode: single
 - id: '1545939407623'
   alias: Släck nattduksbordslampor
   trigger:
@@ -290,10 +302,10 @@
     platform: time
   condition:
   - condition: state
-    entity_id: device_tracker.izac_xr
+    entity_id: device_tracker.izac_xr_mobile_app
     state: not_home
   - condition: state
-    entity_id: device_tracker.katrin_zagerholm_iphone
+    entity_id: device_tracker.katrin_zagerholm_iphone_mobile_app
     state: not_home
   action:
   - data:
@@ -302,6 +314,7 @@
   - data:
       entity_id: group.livingroom_lights
     service: switch.turn_off
+  mode: single
 - id: '1559243971442'
   alias: Notify at door bell
   trigger:
@@ -314,11 +327,12 @@
   - data:
       message: Någon ringde på dörrklockan!
       title: Dörrklockan
-    service: notify.ios_izac_xr
+    service: notify.mobile_app_izac_xr
   - data:
       message: Någon ringde på dörrklockan!
       title: Dörrklockan
-    service: notify.ios_katrin_zagerholm_iphone
+    service: notify.mobile_app_katrin_zagerholm_iphone
+  mode: single
 - id: '1562962609944'
   alias: Set theme at startup
   trigger:
@@ -369,25 +383,6 @@
       entity_id: media_player.sovrum
       is_volume_muted: false
     service: media_player.volume_mute
-- id: '1573327010133'
-  alias: Tänd nattduksbordslampor på helgen
-  description: ''
-  trigger:
-  - at: 08:30:00
-    platform: time
-  condition:
-  - condition: state
-    entity_id: binary_sensor.workday_sensor
-    state: 'off'
-  action:
-  - data:
-      brightness: 1
-      entity_id: light.sanglampa_isac
-    service: light.turn_on
-  - data:
-      brightness: 1
-      entity_id: light.sanglampa_katrin
-    service: light.turn_on
 - id: '1574281607937'
   alias: Tänd växtbelysning
   description: ''
