--- a/scripts.yaml
+++ b/scripts.yaml
@@ -5,15 +5,27 @@
       message: 'Train date: {{ as_timestamp(states(''sensor.tag_07_00_mot_gbg_c''))
         | timestamp_custom(''%Y-%m-%dT%H:%M:%S'') }}'
     service: persistent_notification.create
-disable_pihole_30_mins:
-  alias: Disable PiHole for 30 mins
-  sequence:
-  - data:
-      duration: 00:30:00
-    service: pi_hole.disable
-  - data: {}
-    entity_id: timer.pause_pihole
-    service: timer.cancel
-  - data: {}
-    entity_id: timer.pause_pihole
-    service: timer.start
+
+watch_svt_1:
+    sequence:
+    - service: media_player.play_media
+      data:
+        entity_id: media_player.lg_tv
+        media_content_id: "SVT1 Väst"
+        media_content_type: "channel"
+
+watch_barnkanalen:
+    sequence:
+    - service: media_player.play_media
+      data:
+        entity_id: media_player.lg_tv
+        media_content_id: "SVT Barn/SVT24"
+        media_content_type: "channel"
+        
+watch_svt_1_hd:
+    sequence:
+    - service: media_player.play_media
+      data:
+        entity_id: media_player.lg_tv
+        media_content_id: "SVT1 HD Väst"
+        media_content_type: "channel"
