--- a/groups.yaml
+++ b/groups.yaml
@@ -48,6 +48,7 @@ outdoor_lights:
     - light.lampa_altan
     - light.light_terrace
     - light.belysning_framsida
+    - light.xmas_light_front
     
 diningroom_lights:
   name: Matsal
