--- a/lights.yaml
+++ b/lights.yaml
@@ -36,6 +36,33 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.ljusslinga_altan
+    xmas_light_front:
+      friendly_name: "Julbelysning framsida"
+      value_template: '{{ states.switch.julbelysning_framsida.state }}'
+      turn_on:
+        service: switch.turn_on
+        entity_id: switch.julbelysning_framsida
+      turn_off:
+        service: switch.turn_off
+        entity_id: switch.julbelysning_framsida
+    growing_light_dining_area:
+      friendly_name: "Växtbelysning matsal"
+      value_template: '{{ states.switch.uttag3.state }}'
+      turn_on:
+        service: switch.turn_on
+        entity_id: switch.uttag3
+      turn_off:
+        service: switch.turn_off
+        entity_id: switch.uttag3
+#    xmas_tree:
+#      friendly_name: "Julgran"
+#      value_template: '{{ states.switch.uttag3.state }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.uttag3
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.uttag3
 - platform: group
   name: Sänglampor
   entities:
